--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A starting point for a web app built with React/JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,14 @@
   "bugs": {
     "url": "https://github.com/thegenesisproject/react-javascript-starter/issues"
   },
-  "homepage": "https://github.com/thegenesisproject/react-javascript-starter#readme"
+  "homepage": "https://github.com/thegenesisproject/react-javascript-starter#readme",
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8"
+  }
 }
