chore(app): setup Code Climate with README badges
Test coverage analysis just tells you what percentage of your code is actually executed when you run your test suite. It's not necessarily an indicator that your tests are any good, but it can be helpful for tracking down untested code.

- Add code climate config file
- Configure test reporting in Jest config file
- Configure repo at codeclimate.com
- Link Travis CI repo using Code Climate repo token
- Add README badges

Resources:
- https://codeclimate.com
- https://docs.codeclimate.com/docs/approve-code-climate-as-a-third-party-application-in-github
- https://jasonraimondi.com/posts/showing-code-coverage-for-a-react-app-using-code-climate-with-travis-ci
- https://docs.codeclimate.com/docs/configuring-test-coverage
- https://docs.codeclimate.com/docs/advanced-configuration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A starting point for a web app built with React/JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand",
+    "test": "jest --runInBand --coverage",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
