--- a/.editorconfig
+++ b/.editorconfig
@@ -44,6 +44,6 @@ indent_style = space
 indent_size = 2
 
 # Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml,.hound.yml}]
+[{package.json,.travis.yml,.hound.yml,.circleci/config.yml}]
 indent_style = space
 indent_size = 2
