--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --runInBand --coverage",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "start:dev": "npm run build:dev && webpack-dev-server --open --mode development --inline --hot",
+    "build:dev": "webpack -d && cp public/index.html dist/index.html",
+    "build": "webpack -p && cp public/index.html dist/index.html"
   },
   "repository": {
     "type": "git",
