--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest --runInBand --coverage",
     "lint": "eslint . --ext .ts",
     "start:dev": "npm run build:dev && webpack-dev-server --open --mode development --inline --hot",
-    "build:dev": "webpack -d && cp public/index.html dist/index.html",
-    "build": "webpack -p && cp public/index.html dist/index.html"
+    "build:dev": "webpack -d",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,8 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "html-loader": "^1.2.1",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
@@ -48,7 +50,6 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "save-dev": "0.0.1-security"
+    "babel-loader": "^8.1.0"
   }
 }
