--- a/.editorconfig
+++ b/.editorconfig
@@ -35,7 +35,7 @@ indent_size = 4
 tab_width = 4
 
 # 2 space indentation
-[*.{js,ts,py,json}]
+[*.{js,jsx,ts,py,json}]
 indent_style = space
 indent_size = 2
 
