--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .ts",
     "start:dev": "npm run build:dev && webpack-dev-server --open --mode development --inline --hot",
     "build:dev": "webpack -d",
-    "build": "webpack -p"
+    "build": "webpack -p && npm run build:css",
+    "build:css": "postcss public/assets/styles/tailwind.css -o public/assets/styles/tailwind.build.css"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
   },
   "homepage": "https://github.com/thegenesisproject/react-javascript-starter#readme",
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.4.0",
@@ -42,6 +45,12 @@
     "html-loader": "^1.2.1",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
+    "mini-css-extract-plugin": "^0.11.2",
+    "postcss-cli": "^7.1.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
+    "tailwindcss": "^1.8.8",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
