bug(tests): use JSX files for testing
Removes ESLint error: "JSX imports cannot be used in JS files"

- https://stackoverflow.com/a/43031230

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,8 @@
 {
-  "testRegex": "((\\.|/*.)(spec|test))\\.js?$",
+  "testRegex": "((\\.|/*.)(spec|test))\\.jsx?$",
   "setupFilesAfterEnv": ["<rootDir>/src/tests/enzyme.setup.js"],
   "collectCoverage": true,
   "collectCoverageFrom": ["src/**/*.{js,jsx,ts,tsx}"],
-  "coverageReporters": ["text", "lcov", "json", "html"]
+  "coverageReporters": ["text", "lcov", "json", "html"],
+  "moduleFileExtensions": ["js", "jsx"]
 }
