--- a/.editorconfig
+++ b/.editorconfig
@@ -39,7 +39,7 @@ tab_width = 4
 indent_style = space
 indent_size = 2
 
-[{*.rb, *.yml, *.js.map}]
+[{*.rb, *.yml, *.js.map, *.jsx}]
 indent_style = space
 indent_size = 2
 
