bug(eslint): fix errors in Hound CI
- https://egghead.io/lessons/react-linting-react-jsx-with-eslint-in-es6
- https://stackoverflow.com/a/43426331/2661028
- https://babeljs.io/blog/2020/07/13/the-state-of-babel-eslint

--- a/.editorconfig
+++ b/.editorconfig
@@ -35,11 +35,11 @@ indent_size = 4
 tab_width = 4
 
 # 2 space indentation
-[*.{js,jsx,ts,py,json}]
+[*.{js,jsx,ts,py,json,scss}]
 indent_style = space
 indent_size = 2
 
-[{*.rb, *.yml, *.js.map, *.jsx}]
+[{*.rb, *.yml, *.js.map, *.jsx, *.scss}]
 indent_style = space
 indent_size = 2
 
